service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: frontend
  ports:
    - name: nginx-http
      port: 6001
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  selector:
    app: backend
  ports:
    - name: multitool-http
      port: 6002
      targetPort: 1080
